<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowsBackground"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsNavHeight"
        android:background="@color/colorWhite"
        android:elevation="@dimen/len_2"
        android:outlineProvider="bounds"
        tools:targetApi="lollipop">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/statusBarSize"
            android:orientation="vertical"
            android:paddingLeft="@dimen/len_4"
            android:paddingRight="@dimen/len_4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/len_4"
                android:layout_marginEnd="@dimen/len_40"
                android:layout_marginRight="@dimen/len_40"
                android:layout_marginTop="@dimen/len_4"
                android:paddingBottom="@dimen/len_4"
                android:paddingEnd="@dimen/len_20"
                android:paddingLeft="@dimen/len_4"
                android:paddingRight="@dimen/len_20"
                android:paddingStart="@dimen/len_4"
                android:paddingTop="@dimen/len_4"
                android:scaleType="centerCrop"
                android:text="@string/settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_35" />

            <LinearLayout
                android:id="@+id/ll_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_60"
                android:layout_marginTop="@dimen/len_60"
                android:layout_gravity="bottom|center_vertical"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="@dimen/len_10"
                    android:drawableStart="@drawable/ic_account"
                    android:gravity="center_vertical"
                    android:padding="@dimen/len_10"
                    android:text="@string/account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_20" />

                <com.example.common.widget.AvatarView
                    android:id="@+id/civ_avatar"
                    android:layout_width="@dimen/len_50"
                    android:layout_height="@dimen/len_50"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="@dimen/len_15"
                    android:src="@mipmap/default_portrait"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp" />

            </LinearLayout>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_4"
            android:background="@color/colorWhite"
            android:elevation="@dimen/len_2"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <!--todo  加入一个border -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_60"
                android:layout_marginTop="@dimen/len_5"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/len_60"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_theme"
                        android:drawableStart="@drawable/ic_theme"
                        android:text="@string/theme"
                        tools:ignore="SpUsage"
                        android:theme="@style/settingsTextStyle"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/len_50"
                        android:layout_height="@dimen/len_50"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/len_10"
                        android:src="@drawable/ic_day"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/len_60"
                        android:drawableLeft="@drawable/ic_notification"
                        android:drawableStart="@drawable/ic_notification"
                        android:text="@string/notification"
                        android:theme="@style/settingsTextStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/len_60"
                        android:drawableLeft="@drawable/ic_wristband"
                        android:drawableStart="@drawable/ic_wristband"
                        android:text="@string/wristband"
                        android:theme="@style/settingsTextStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/len_60"
                        android:drawableLeft="@drawable/ic_payment"
                        android:drawableStart="@drawable/ic_payment"
                        android:text="@string/payment"
                        android:theme="@style/settingsTextStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/len_60"
                        android:drawableLeft="@drawable/ic_language"
                        android:drawableStart="@drawable/ic_language"
                        android:text="@string/language"
                        android:theme="@style/settingsTextStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/len_2"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/len_12"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_text_style">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/len_60"
                        android:drawableLeft="@drawable/ic_about"
                        android:drawableStart="@drawable/ic_about"
                        android:text="@string/about"
                        android:theme="@style/settingsTextStyle" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.v7.widget.LinearLayoutCompat>